style: fix missing padding

--- a/styles/pages/Location.module.scss
+++ b/styles/pages/Location.module.scss
@@ -1,6 +1,6 @@
 .locations {
     margin: 0 auto;
-    padding: 2.5rem 0;
+    padding: 2.5rem .5rem;
     display: flex;
     flex-wrap: wrap;
     gap: 1.25rem 3.125rem;
